with the @NoJexl annotation on source code. This is achieved through a crude but light mechanism akin to
a security manager that controls what JEXL can introspect and thus expose to scripts.
Used in conjunction with options (JexlOptions) and features (JexlFeatures), the permissions (JexlPermissions)
allow fine-tuning the scripting integration into any project.

New Features in 3.3:
====================
* JEXL-369:     Add 'let' and 'const' variable declarations
* JEXL-365:     Lambda expressions
* JEXL-363:     Allow retrieving captured variables in script
* JEXL-360:     Add missing bitshift operators ( >>, >>>, <<)
* JEXL-359:     Allow per-operator arithmetic handling of null arguments
* JEXL-357:     Configure accessible packages/classes/methods/fields

Bugs Fixed in 3.3:
==================
* JEXL-370:     Cannot check if variable is defined using ObjectContext if the value is null
* JEXL-364:     Evaluator options not propagated in closures
* JEXL-362:     JexlInfo position reporting is off
* JEXL-361:     Null may be used as operand silently even in arithmetic strict(true) mode
* JEXL-354:     #pragma does not handle negative integer or real literals
* JEXL-353:     Documentation error for not-in/not-match operator

========================================================================================================================
Release 3.2.1
========================================================================================================================

Version 3.2.1 is a maintenance release.

Compatibility with previous releases
====================================
Version 3.2.1 is source and binary compatible with 3.2.

Bugs Fixed in 3.2.1:
==================
* JEXL-352:      Possible memory leak regarding parser jjtree nodes in JEXL 3.2
* JEXL-351:      JXLT Template fails when using sandboxing
* JEXL-350:      map[null] throws "unsolvable property" when a Sandbox is used
